--- a/Desafios/d012/estilo/style.css
+++ b/Desafios/d012/estilo/style.css
@@ -1,12 +1,23 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
 *{
     margin: 0px;
     padding: 0px;
 }
-body{
+
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
+html, body{
     background-color: darkgrey;
     min-height: 100vh;
+    font-family: var(--fonte1);
 }
 
 header{
@@ -16,6 +27,8 @@ header{
 }
 header h1{
     padding-top: 50px;
+    font-family: var(--fonte2);
+    font-size: 7vw;
     font-variant: small-caps;
 }
 header p{
@@ -30,23 +43,40 @@ a:hover{
     text-decoration: underline;
 }
 section{
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
+    line-height: 1.7em;
 }
-section p {
-    line-height: 2em;
+section > p{
+    padding-bottom: 2em;
+}
+#img1{
+    background-image: url(../imagens/background001.jpg);
+    background-position: center right;
+    background-size: cover;
+}
+#img2{
+    background-image: url(../imagens/background002.jpg);
+    background-size: cover;
+
 }
 .normal{
     background-color: white;
 }
-.imagem{
+section.imagem{
     color: white;
     background-color: rgb(41, 40, 40);
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.336);
+    background-attachment: fixed;
 }
 .imagem p{
-    background-color: rgba(0, 0, 0, 0.164);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    text-shadow: 1px 1px 0px black;
 }
 footer{
     background-color: black;
