--- a/exercicios/ex026/mq02/estilos/paisagem.css
+++ b/exercicios/ex026/mq02/estilos/paisagem.css
@@ -3,6 +3,6 @@
 /* Paisagem */
 
 body{
-  background-image: url(../imagens/cev-landscape.jpg);
-  background-position: left bottom;
+background: url(../imagens/cev-landscape.jpg) left bottom no-repeat;
+background-size: contain ;
 }
